--- a/index.html
+++ b/index.html
@@ -1,89 +1,67 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KingCast Podcast</title>
-  <style>
-    body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 20px; }
-    h1 { text-align: center; color: #333; }
-    .folder { background: #fff; margin: 15px auto; border-radius: 10px; max-width: 600px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
-    .folder h2 { margin: 0; padding: 15px; cursor: pointer; background: #eee; border-radius: 10px 10px 0 0; }
-    .episodes { display: none; padding: 15px; }
-    .podcast { margin-bottom: 15px; }
-    audio { width: 100%; margin-top: 10px; }
-  </style>
-</head>
-<body>
-  <h1>🎙️ KingCast Podcast</h1>
-  <img src="kingCast.png" alt="Capa do Podcast" class="cover">
+<script>
+  const repoOwner = "jhoelrodriguespodcast";
+  const repoName = "kingcast";
+  const branch = "main"; // seu repositório está em main mesmo
 
-  <div id="folders"></div>
+  async function loadFolder(folder) {
+    const res = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents/${folder}?ref=${branch}`);
+    const files = await res.json();
 
-  <script>
-    const repoOwner = "jhoelrodriguespodcast";
-    const repoName = "kingcast";
+    const mp3Files = files.filter(file => file.name.toLowerCase().endsWith('.mp3'));
 
-    async function loadFolder(folder) {
-      const res = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents/${folder}`);
-      const files = await res.json();
+    const episodes = document.createElement("div");
+    episodes.className = "episodes";
 
-      const mp3Files = files.filter(file => file.name.toLowerCase().endsWith('.mp3'));
+    mp3Files.forEach(file => {
+      // Corrige espaços e acentos
+      const rawUrl = `https://raw.githubusercontent.com/${repoOwner}/${repoName}/${branch}/${encodeURIComponent(file.path).replace(/%2F/g, '/')}`;
 
-      const episodes = document.createElement("div");
-      episodes.className = "episodes";
+      const epDiv = document.createElement("div");
+      epDiv.className = "podcast";
+      epDiv.innerHTML = `
+        <h3>${file.name.replace(/\.mp3$/i, '')}</h3>
+        <audio controls>
+          <source src="${rawUrl}" type="audio/mpeg">
+          Seu navegador não suporta áudio HTML5.
+        </audio>
+      `;
+      episodes.appendChild(epDiv);
+    });
 
-      mp3Files.forEach(file => {
-        // Monta URL RAW para tocar o áudio
-        const rawUrl = `https://raw.githubusercontent.com/${repoOwner}/${repoName}/main/${encodeURIComponent(file.path).replace(/%2F/g, '/')}`;
-        const epDiv = document.createElement("div");
-        epDiv.className = "podcast";
-        epDiv.innerHTML = `
-          <h3>${file.name.replace(/\.mp3$/i, '')}</h3>
-          <audio controls>
-            <source src="${rawUrl}" type="audio/mpeg">
-            Seu navegador não suporta áudio HTML5.
-          </audio>
-        `;
-        episodes.appendChild(epDiv);
+    return episodes;
+  }
+
+  async function loadFolders() {
+    const res = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents?ref=${branch}`);
+    const files = await res.json();
+
+    const folders = files.filter(file => file.type === "dir");
+    const container = document.getElementById("folders");
+
+    folders.forEach(folder => {
+      const div = document.createElement("div");
+      div.className = "folder";
+
+      const title = document.createElement("h2");
+      title.textContent = folder.name;
+
+      const episodesContainer = document.createElement("div");
+      episodesContainer.className = "episodes";
+      episodesContainer.style.display = "none";
+
+      title.addEventListener("click", async () => {
+        if (episodesContainer.childElementCount === 0) {
+          const episodes = await loadFolder(folder.name);
+          episodesContainer.appendChild(episodes);
+        }
+        episodesContainer.style.display = episodesContainer.style.display === "none" ? "block" : "none";
       });
 
-      return episodes;
-    }
+      div.appendChild(title);
+      div.appendChild(episodesContainer);
+      container.appendChild(div);
+    });
+  }
 
-    async function loadFolders() {
-      const res = await fetch(`https://api.github.com/repos/${repoOwner}/${repoName}/contents`);
-      const files = await res.json();
-
-      const folders = files.filter(file => file.type === "dir");
-
-      const container = document.getElementById("folders");
-
-      folders.forEach(folder => {
-        const div = document.createElement("div");
-        div.className = "folder";
-
-        const title = document.createElement("h2");
-        title.textContent = folder.name;
-
-        const episodesContainer = document.createElement("div");
-        episodesContainer.className = "episodes";
-
-        title.addEventListener("click", async () => {
-          if (episodesContainer.childElementCount === 0) {
-            const episodes = await loadFolder(folder.name);
-            episodesContainer.appendChild(episodes);
-          }
-          episodesContainer.style.display = episodesContainer.style.display === "none" ? "block" : "none";
-        });
-
-        div.appendChild(title);
-        div.appendChild(episodesContainer);
-        container.appendChild(div);
-      });
-    }
-
-    loadFolders();
-  </script>
-</body>
-</html>
+  loadFolders();
+</script>
