--- a/index.html
+++ b/index.html
@@ -1,82 +1,3 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <title>KingCast Podcast</title>
-  <style>
-    body { font-family: Arial, sans-serif; background:#f9f9f9; margin:20px; }
-    h1 { text-align:center; }
-    .folder { 
-      margin: 10px 0; 
-      padding: 10px; 
-      background: #ddd; 
-      cursor: pointer; 
-      border-radius: 5px;
-    }
-    .audio-list { 
-      display: none; 
-      margin-left: 20px; 
-      margin-top: 10px;
-    }
-    .audio-item { margin: 8px 0; }
-    audio { width: 100%; max-width: 600px; margin-top: 5px; }
-  </style>
-</head>
-<body>
-  <h1>🎧 KingCast Podcast</h1>
-
-  <div class="folder" onclick="toggleFolder('Deus')">📂 Deus</div>
-  <div id="Deus" class="audio-list"></div>
-
-  <script>
-    const repoOwner = "jhoelrodriguespodcast";
-    const repoName = "kingcast";
-    const branch = "main";
-
-    // Lista de arquivos de áudio por pasta
-    const folders = {
-      "Deus": [
-        "A eternidade de Deus.mp3",
-        "A forma de Deus.mp3",
-        "A grandeza de Deus.mp3",
-        "O nome de Deus.mp3",
-        "O poder de Deus.mp3",
-        "Personalidade de Deus.mp3"
-      ]
-    };
-
-    function toggleFolder(folderName) {
-      const container = document.getElementById(folderName);
-      if (container.style.display === "block") {
-        container.style.display = "none";
-        container.innerHTML = "";
-      } else {
-        container.style.display = "block";
-        loadAudios(folderName, container);
-      }
-    }
-
-    function loadAudios(folderName, container) {
-      container.innerHTML = ""; // limpa antes
-      const files = folders[folderName];
-
-      files.forEach(fileName => {
-        const item = document.createElement("div");
-        item.className = "audio-item";
-
-        // link RAW do GitHub
-        const rawUrl = `https://raw.githubusercontent.com/${repoOwner}/${repoName}/${branch}/${folderName}/${encodeURIComponent(fileName)}`;
-
-        item.innerHTML = `
-          <p>${fileName}</p>
-          <audio controls>
-            <source src="${rawUrl}" type="audio/mpeg">
-            Seu navegador não suporta o elemento de áudio.
-          </audio>
-        `;
-        container.appendChild(item);
-      });
-    }
-  </script>
-</body>
-</html>
+<audio controls>
+  <source src="https://raw.githubusercontent.com/jhoelrodriguespodcast/kingcast/main/Deus/A%20eternidade%20de%20Deus.mp3" type="audio/mpeg">
+</audio>
