--- a/index.html
+++ b/index.html
@@ -1,3 +1,53 @@
-<audio controls>
-  <source src="https://raw.githubusercontent.com/jhoelrodriguespodcast/kingcast/main/Deus/A%20eternidade%20de%20Deus.mp3" type="audio/mpeg">
-</audio>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KingCast</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f9;
+      margin: 0;
+      padding: 20px;
+      color: #333;
+    }
+    h1 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+    li {
+      margin: 10px 0;
+    }
+    a {
+      display: block;
+      padding: 12px;
+      background: #007acc;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      transition: background 0.3s;
+      text-align: center;
+    }
+    a:hover {
+      background: #005f99;
+    }
+  </style>
+</head>
+<body>
+  <h1>📖 KingCast</h1>
+  <ul>
+    <!-- Link direto para a página Deus -->
+    <li><a href="Deus/index.html">Deus</a></li>
+    
+    <!-- Outras pastas -->
+    <li><a href="Escatologia/index.html">Escatologia</a></li>
+  </ul>
+</body>
+</html>
