--- a/Deus/Index.html
+++ b/Deus/Index.html
@@ -3,51 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KingCast</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f9;
-      margin: 0;
-      padding: 20px;
-      color: #333;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-      max-width: 600px;
-      margin: 0 auto;
-    }
-    li {
-      margin: 10px 0;
-    }
-    a {
-      display: block;
-      padding: 12px;
-      background: #007acc;
-      color: white;
-      text-decoration: none;
-      border-radius: 6px;
-      transition: background 0.3s;
-      text-align: center;
-    }
-    a:hover {
-      background: #005f99;
-    }
-  </style>
+  <title>Podcast - Série Deus</title>
 </head>
 <body>
-  <h1>📖 KingCast</h1>
-  <ul>
-    <!-- Link direto para a página Deus -->
-    <li><a href="Deus/index.html">Deus</a></li>
-    
-    <!-- Outras pastas -->
-    <li><a href="Escatologia/index.html">Escatologia</a></li>
-  </ul>
+  <h1>Podcast - Série Deus</h1>
+  <p>Ouça os episódios diretamente do Spotify:</p>
+
+  <iframe style="border-radius:12px" 
+    src="https://open.spotify.com/embed/episode/0CvU1KqBpn8nNMV0IrNNg6?utm_source=generator" 
+    width="100%" height="152" frameborder="0" allowfullscreen="" 
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+  </iframe>
+
+  <iframe style="border-radius:12px" 
+    src="https://open.spotify.com/embed/episode/2VPTtr2iJEq2ueG2xIZQqy?utm_source=generator" 
+    width="100%" height="152" frameborder="0" allowfullscreen="" 
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+  </iframe>
+
+  <iframe style="border-radius:12px" 
+    src="https://open.spotify.com/embed/episode/1l3TloiW0KQH8RdymXSrYN?utm_source=generator" 
+    width="100%" height="152" frameborder="0" allowfullscreen="" 
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+  </iframe>
+
+  <iframe style="border-radius:12px" 
+    src="https://open.spotify.com/embed/episode/64NWkPxmUCmT155JLwgpoN?utm_source=generator" 
+    width="100%" height="152" frameborder="0" allowfullscreen="" 
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+  </iframe>
+
+  <iframe style="border-radius:12px" 
+    src="https://open.spotify.com/embed/episode/0oyrugXfdp7Qo7tnDfjCRa?utm_source=generator" 
+    width="100%" height="152" frameborder="0" allowfullscreen="" 
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+  </iframe>
+
+  <iframe style="border-radius:12px" 
+    src="https://open.spotify.com/embed/episode/7nkBSntS4R58YJaDf66jRA?utm_source=generator" 
+    width="100%" height="152" frameborder="0" allowfullscreen="" 
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+  </iframe>
+
 </body>
 </html>
