--- a/index.html
+++ b/index.html
@@ -47,7 +47,63 @@
     <li><a href="Deus/index.html">Deus</a></li>
     
     <!-- Outras pastas -->
-    <li><a href="Escatologia/index.html">Escatologia</a></li>
+    <li><a href="Escatologia/index.html">Escatologia</a></li><!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>KingCast</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: #f7f7f7;
+      margin: 0;
+      padding: 0;
+    }
+    header img {
+      max-width: 300px;
+      margin: 20px auto;
+      display: block;
+    }
+    h1 {
+      margin-top: 10px;
+      color: #333;
+    }
+    .buttons {
+      margin-top: 20px;
+    }
+    .buttons a {
+      display: inline-block;
+      padding: 15px 25px;
+      margin: 10px;
+      font-size: 18px;
+      text-decoration: none;
+      color: #fff;
+      background: #0077cc;
+      border-radius: 8px;
+      transition: background 0.3s;
+    }
+    .buttons a:hover {
+      background: #005fa3;
+    }
+  </style>
+</head>
+<body>
+  <!-- Imagem no topo -->
+  <header>
+    <img src="capa.png" alt="Logo KingCast">
+    <h1>Bem-vindo ao KingCast</h1>
+  </header>
+
+  <!-- Botões para temas -->
+  <div class="buttons">
+    <a href="Deus/index.html">Deus</a>
+    <a href="OutroTema/index.html">Outro Tema</a>
+    <a href="MaisUm/index.html">Mais um</a>
+  </div>
+</body>
+</html>
+
   </ul>
 </body>
 </html>
