--- a/index.html
+++ b/index.html
@@ -1,56 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KingCast</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f9;
-      margin: 0;
-      padding: 20px;
-      color: #333;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-      max-width: 600px;
-      margin: 0 auto;
-    }
-    li {
-      margin: 10px 0;
-    }
-    a {
-      display: block;
-      padding: 12px;
-      background: #007acc;
-      color: white;
-      text-decoration: none;
-      border-radius: 6px;
-      transition: background 0.3s;
-      text-align: center;
-    }
-    a:hover {
-      background: #005f99;
-    }
-  </style>
-</head>
-<body>
-  <h1>📖 KingCast</h1>
-  <ul>
-    <!-- Link direto para a página Deus -->
-    <li><a href="Deus/index.html">Deus</a></li>
-    
-    <!-- Outras pastas -->
-    <li><a href="Escatologia/index.html">Escatologia</a></li><!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>KingCast</title>
   <style>
     body {
@@ -58,52 +9,49 @@
       text-align: center;
       background: #f7f7f7;
       margin: 0;
-      padding: 0;
-    }
-    header img {
-      max-width: 300px;
-      margin: 20px auto;
-      display: block;
-    }
-    h1 {
-      margin-top: 10px;
+      padding: 20px;
       color: #333;
     }
-    .buttons {
-      margin-top: 20px;
+
+    header img {
+      max-width: 300px;
+      width: 100%;
+      height: auto;
+      margin: 0 auto 20px;
+      display: block;
     }
+
+    h1 {
+      margin-bottom: 30px;
+      font-size: 2rem;
+    }
+
     .buttons a {
       display: inline-block;
-      padding: 15px 25px;
       margin: 10px;
-      font-size: 18px;
-      text-decoration: none;
+      padding: 15px 30px;
+      font-size: 1.2rem;
       color: #fff;
-      background: #0077cc;
-      border-radius: 8px;
+      background: #007acc;
+      border-radius: 6px;
+      text-decoration: none;
       transition: background 0.3s;
     }
+
     .buttons a:hover {
-      background: #005fa3;
+      background: #005f99;
     }
   </style>
 </head>
 <body>
-  <!-- Imagem no topo -->
   <header>
-    <img src="capa.png" alt="Logo KingCast">
+    <img src="kingcast.png" alt="Logo KingCast" />
     <h1>Bem-vindo ao KingCast</h1>
   </header>
 
-  <!-- Botões para temas -->
   <div class="buttons">
     <a href="Deus/index.html">Deus</a>
-    <a href="OutroTema/index.html">Outro Tema</a>
-    <a href="MaisUm/index.html">Mais um</a>
+    <a href="Escatologia/index.html">Escatologia</a>
   </div>
-</body>
-</html>
-
-  </ul>
 </body>
 </html>
