--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       font-size: 2rem;
     }
 
+    .buttons {
+      margin-top: 20px;
+    }
+
     .buttons a {
       display: inline-block;
       margin: 10px;
@@ -52,6 +56,10 @@
   <div class="buttons">
     <a href="Deus/index.html">Deus</a>
     <a href="Escatologia/index.html">Escatologia</a>
+    <a href="Jesus/index.html">Jesus</a>
+    <a href="EspiritoSanto/index.html">Espírito Santo</a>
+    <a href="Salvacao/index.html">Salvação</a>
+    <a href="Pecado/index.html">Pecado</a>
   </div>
 </body>
 </html>
