Removendo áudios da pasta Deus

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <div class="buttons">
     <a href="Deus/index.html">Deus</a>
-    <a href="Escatologia/index.html">Escatologia</a>
+    <a href="VoltadeJesus/index.html">Escatologia</a>
     <a href="Jesus/index.html">Jesus</a>
     <a href="EspiritoSanto/index.html">Espírito Santo</a>
     <a href="Salvacao/index.html">Salvação</a>
