--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -1,1 +1,63 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <title>Tema</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: #f7f7f7;
+      margin: 0;
+      padding: 20px;
+      color: #333;
+    }
+
+    header img {
+      max-width: 200px;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      margin-bottom: 20px;
+    }
+
+    iframe {
+      margin: 20px auto;
+      display: block;
+    }
+
+    .back-button {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 1rem;
+      color: #fff;
+      background: #007acc;
+      border-radius: 6px;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+
+    .back-button:hover {
+      background: #005f99;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="../kingcast.png" alt="Logo KingCast" />
+    <h1>Tema</h1>
+  </header>
+
+  <!-- Aqui você coloca os players do Spotify ou lista de áudios -->
+  <iframe style="border-radius:12px" 
+    src="https://open.spotify.com/embed/episode/XXXXXXXXXXXX?utm_source=generator" 
+    width="100%" height="232" frameBorder="0" 
+    allowfullscreen="" 
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+  <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
+</body>
+</html>
 
