--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Tema</title>
+  <meta charset="UTF-8" />
+  <title>Jesus - KingCast</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -20,44 +20,47 @@
 
     h1 {
       margin-bottom: 20px;
+      font-size: 2rem;
     }
 
     iframe {
-      margin: 20px auto;
-      display: block;
+      border-radius: 12px;
+      margin-top: 20px;
     }
 
-    .back-button {
+    a.voltar {
       display: inline-block;
-      margin-top: 20px;
-      padding: 10px 20px;
+      margin-top: 30px;
+      padding: 12px 24px;
       font-size: 1rem;
       color: #fff;
       background: #007acc;
       border-radius: 6px;
       text-decoration: none;
-      transition: background 0.3s;
     }
 
-    .back-button:hover {
+    a.voltar:hover {
       background: #005f99;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="../kingcast.png" alt="Logo KingCast" />
-    <h1>Tema</h1>
+    <img src="../KingCast.png" alt="Logo KingCast" />
+    <h1>Episódio sobre Jesus</h1>
   </header>
 
-  <!-- Aqui você coloca os players do Spotify ou lista de áudios -->
+  <!-- Player do Spotify -->
   <iframe style="border-radius:12px" 
-    src="https://open.spotify.com/embed/episode/XXXXXXXXXXXX?utm_source=generator" 
-    width="100%" height="232" frameBorder="0" 
-    allowfullscreen="" 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+          src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl?utm_source=generator" 
+          width="100%" height="232" frameBorder="0" 
+          allowfullscreen="" 
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+          loading="lazy"></iframe>
 
-  <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
+  <!-- Botão para voltar -->
+  <div>
+    <a href="../index.html" class="voltar">⬅ Voltar para o Início</a>
+  </div>
 </body>
 </html>
-
