--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -1,66 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <title>Jesus - KingCast</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Podcast sobre Jesus</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      background: #f7f7f7;
+      background: #f4f4f4;
       margin: 0;
       padding: 20px;
+    }
+    h1 {
       color: #333;
     }
-
-    header img {
-      max-width: 200px;
-      margin-bottom: 20px;
-    }
-
-    h1 {
-      margin-bottom: 20px;
-      font-size: 2rem;
-    }
-
     iframe {
       border-radius: 12px;
       margin-top: 20px;
     }
-
-    a.voltar {
-      display: inline-block;
-      margin-top: 30px;
-      padding: 12px 24px;
-      font-size: 1rem;
-      color: #fff;
-      background: #007acc;
-      border-radius: 6px;
-      text-decoration: none;
-    }
-
-    a.voltar:hover {
-      background: #005f99;
-    }
   </style>
 </head>
 <body>
-  <header>
-    <img src="../KingCast.png" alt="Logo KingCast" />
-    <h1>Episódio sobre Jesus</h1>
-  </header>
-
+  <h1>Episódio sobre Jesus</h1>
+  
   <!-- Player do Spotify -->
   <iframe style="border-radius:12px" 
           src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl?utm_source=generator" 
-          width="100%" height="232" frameBorder="0" 
+          width="100%" 
+          height="232" 
+          frameborder="0" 
           allowfullscreen="" 
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
-          loading="lazy"></iframe>
+          loading="lazy">
+  </iframe>
 
-  <!-- Botão para voltar -->
-  <div>
-    <a href="../index.html" class="voltar">⬅ Voltar para o Início</a>
-  </div>
+  <p><a href="../index.html">⬅️ Voltar para página principal</a></p>
 </body>
 </html>
