--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -2,39 +2,64 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Podcast sobre Jesus</title>
+  <title>Jesus - KingCast</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      background: #f4f4f4;
+      background: #f7f7f7;
       margin: 0;
       padding: 20px;
-    }
-    h1 {
       color: #333;
     }
+
+    header img {
+      max-width: 200px;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      margin-bottom: 20px;
+    }
+
     iframe {
+      margin: 20px auto;
+      display: block;
       border-radius: 12px;
+    }
+
+    .back-button {
+      display: inline-block;
       margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 1rem;
+      color: #fff;
+      background: #007acc;
+      border-radius: 6px;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+
+    .back-button:hover {
+      background: #005f99;
     }
   </style>
 </head>
 <body>
-  <h1>Episódio sobre Jesus</h1>
-  
+  <header>
+    <img src="../KingCast.png" alt="Logo KingCast" />
+    <h1>Episódio sobre Jesus</h1>
+  </header>
+
   <!-- Player do Spotify -->
-  <iframe style="border-radius:12px" 
-          src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl?utm_source=generator" 
-          width="100%" 
-          height="232" 
-          frameborder="0" 
-          allowfullscreen="" 
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
-          loading="lazy">
+  <iframe 
+    src="https://open.spotify.com/embed/episode/35q1zOrBmsCB0EHu04ymWh?utm_source=generator" 
+    width="100%" height="232" frameBorder="0" 
+    allowfullscreen 
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
   </iframe>
 
-  <p><a href="../index.html">⬅️ Voltar para página principal</a></p>
+  <!-- Botão voltar -->
+  <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
 </html>
