--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -22,6 +22,11 @@
       margin-bottom: 20px;
     }
 
+    h2 {
+      margin-top: 40px;
+      color: #007acc;
+    }
+
     iframe {
       margin: 20px auto;
       display: block;
@@ -30,7 +35,7 @@
 
     .back-button {
       display: inline-block;
-      margin-top: 20px;
+      margin-top: 40px;
       padding: 10px 20px;
       font-size: 1rem;
       color: #fff;
@@ -48,12 +53,22 @@
 <body>
   <header>
     <img src="../KingCast.png" alt="Logo KingCast" />
-    <h1>Episódio sobre Jesus</h1>
+    <h1>Episódios sobre Jesus</h1>
   </header>
 
-  <!-- Player do Spotify -->
+  <!-- Episódio 1 -->
+  <h2>A Superioridade de Jesus</h2>
   <iframe 
     src="https://open.spotify.com/embed/episode/35q1zOrBmsCB0EHu04ymWh?utm_source=generator" 
+    width="100%" height="232" frameBorder="0" 
+    allowfullscreen 
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+  </iframe>
+
+  <!-- Episódio 2 -->
+  <h2>A Eternidade de Jesus</h2>
+  <iframe 
+    src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl?si=Zx34Mw76QU24ukKfMjlY1A" 
     width="100%" height="232" frameBorder="0" 
     allowfullscreen 
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
