--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -22,11 +22,6 @@
       margin-bottom: 20px;
     }
 
-    h2 {
-      margin-top: 40px;
-      color: #007acc;
-    }
-
     iframe {
       margin: 20px auto;
       display: block;
@@ -57,23 +52,22 @@
   </header>
 
   <!-- Episódio 1 -->
-
+  <iframe 
     src="https://open.spotify.com/embed/episode/35q1zOrBmsCB0EHu04ymWh?utm_source=generator" 
     width="100%" height="232" frameBorder="0" 
     allowfullscreen 
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
- 
+  </iframe>
 
   <!-- Episódio 2 -->
- 
+  <iframe 
     src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl?si=Zx34Mw76QU24ukKfMjlY1A" 
     width="100%" height="232" frameBorder="0" 
     allowfullscreen 
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
- 
+  </iframe>
 
   <!-- Botão voltar -->
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
 </html>
-
