--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -67,7 +67,16 @@
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
   </iframe>
 
+   <!-- Episódio 3 -->
+  <iframe 
+    src="https://open.spotify.com/episode/4SdpAuFwc67eSueiS6L7gV?si=bb531142aba948d8" 
+    width="100%" height="232" frameBorder="0" 
+    allowfullscreen 
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+  </iframe>
+
   <!-- Botão voltar -->
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
 </html>
+
