--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -67,9 +67,9 @@
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
   </iframe>
 
-   <!-- Episódio 3 -->
+  <!-- Episódio 3 -->
   <iframe 
-    src="https://open.spotify.com/episode/4SdpAuFwc67eSueiS6L7gV?si=bb531142aba948d8" 
+    src="https://open.spotify.com/embed/episode/4SdpAuFwc67eSueiS6L7gV?utm_source=generator" 
     width="100%" height="232" frameBorder="0" 
     allowfullscreen 
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
@@ -79,4 +79,3 @@
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
 </html>
-
