--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -69,7 +69,7 @@
 
   <!-- Episódio 3 -->
   <iframe 
-    src="https://open.spotify.com/embed/episode/4SdpAuFwc67eSueiS6L7gV?utm_source=generator" 
+    src="https://open.spotify.com/embed/episode/6KMtaYjFEt8zHhOUAZeUov?si=83e8caeea267465b" 
     width="100%" height="232" frameBorder="0" 
     allowfullscreen 
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
@@ -79,3 +79,4 @@
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
 </html>
+
