--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
   <div class="buttons">
     <a href="Deus/index.html">Deus</a>
     <a href="Jesus/index.html">Jesus</a>
-    <a href="Escatologia/index.html">Escatologia(em desenvolvimento)</a>
-    <a href="EspiritoSanto/index.html">Espírito Santo(em desenvolvimento)</a>
-    <a href="Salvacao/index.html">Salvação(em desenvolvimento)</a>
-    <a href="Pecado/index.html">Pecado</a>
+    <a href="Escatologia/index.html">Escatologia🔨</a>
+    <a href="EspiritoSanto/index.html">Espírito Santo 🔨</a>
+    <a href="Salvacao/index.html">Salvação 🔨</a>
+    <a href="Pecado/index.html">Pecado 🔨</a>
   </div>
 </body>
 </html>
+
 
