--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>KingCast</title>
+  <title>Jesus - KingCast</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -22,26 +22,28 @@
       margin-bottom: 20px;
     }
 
-    ul {
-      list-style: none;
-      padding: 0;
+    iframe {
+      margin: 20px auto;
+      display: block;
+      border-radius: 12px;
     }
 
-    ul li {
-      margin: 15px 0;
-    }
-
-    a {
+    .back-button {
+      display: inline-block;
+      margin-top: 40px;
+      padding: 10px 20px;
+      font-size: 1rem;
+      color: #fff;
+      background: #007acc;
+      border-radius: 6px;
       text-decoration: none;
-      font-size: 1.2rem;
-      color: #007acc;
+      transition: background 0.3s;
     }
 
-    a:hover {
-      color: #005f99;
+    .back-button:hover {
+      background: #005f99;
     }
 
-    /* Form seguir */
     .follow-box {
       margin-top: 40px;
       padding: 20px;
@@ -75,20 +77,24 @@
 </head>
 <body>
   <header>
-    <img src="KingCast.png" alt="Logo KingCast" />
-    <h1>Bem-vindo ao KingCast</h1>
+    <img src="../KingCast.png" alt="Logo KingCast" />
+    <h1>Episódios sobre Jesus</h1>
   </header>
 
-  <ul>
-    <li><a href="deus/index.html">🎧 Episódios sobre Deus</a></li>
-    <li><a href="jesus/index.html">🎧 Episódios sobre Jesus</a></li>
-  </ul>
+  <!-- Players -->
+  <iframe src="https://open.spotify.com/embed/episode/35q1zOrBmsCB0EHu04ymWh?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+  <iframe src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl?si=Zx34Mw76QU24ukKfMjlY1A" width="100%" height="232" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+  <iframe src="https://open.spotify.com/embed/episode/4SdpAuFwc67eSueiS6L7gV?si=bb531142aba948d8" width="100%" height="232" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+  <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 
   <!-- Form Seguir -->
   <div class="follow-box">
-    <h2>Quer receber novidades do KingCast?</h2>
-    <input type="email" id="email-principal" placeholder="Digite seu email" required>
-    <button onclick="seguir('Principal', 'email-principal')">🔔 Seguir</button>
+    <h2>Quer receber novidades dos episódios sobre Jesus?</h2>
+    <input type="email" id="email-jesus" placeholder="Digite seu email" required>
+    <button onclick="seguir('Jesus', 'email-jesus')">🔔 Seguir</button>
   </div>
 
   <script>
@@ -103,7 +109,7 @@
         method: "POST",
         body: JSON.stringify({ email: email, origem: origem })
       })
-      .then(() => alert("Obrigado por seguir o KingCast!"));
+      .then(() => alert("Obrigado por seguir os episódios sobre " + origem + "!"));
     }
   </script>
 </body>
