--- a/Deus/Index.html
+++ b/Deus/Index.html
@@ -2,48 +2,111 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Podcast - Série Deus</title>
+  <title>Deus - KingCast</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: #f7f7f7;
+      margin: 0;
+      padding: 20px;
+      color: #333;
+    }
+
+    header img {
+      max-width: 200px;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      margin-bottom: 20px;
+    }
+
+    iframe {
+      margin: 20px auto;
+      display: block;
+      border-radius: 12px;
+    }
+
+    .back-button {
+      display: inline-block;
+      margin-top: 40px;
+      padding: 10px 20px;
+      font-size: 1rem;
+      color: #fff;
+      background: #007acc;
+      border-radius: 6px;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+
+    .back-button:hover {
+      background: #005f99;
+    }
+
+    .follow-box {
+      margin-top: 40px;
+      padding: 20px;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      display: inline-block;
+    }
+
+    input[type="email"] {
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      width: 250px;
+    }
+
+    button {
+      padding: 10px 20px;
+      margin-left: 10px;
+      background: #007acc;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #005f99;
+    }
+  </style>
 </head>
 <body>
-  <h1>Podcast - Série Deus</h1>
-  <p>Ouça os episódios diretamente do Spotify:</p>
+  <header>
+    <img src="../KingCast.png" alt="Logo KingCast" />
+    <h1>Episódios sobre Deus</h1>
+  </header>
 
-  <iframe style="border-radius:12px" 
-    src="https://open.spotify.com/embed/episode/0CvU1KqBpn8nNMV0IrNNg6?utm_source=generator" 
-    width="100%" height="152" frameborder="0" allowfullscreen="" 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-  </iframe>
+  <!-- Aqui entram os players do Spotify -->
+  <iframe src="https://open.spotify.com/embed/episode/XXXXXXXXX" width="100%" height="232" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <iframe style="border-radius:12px" 
-    src="https://open.spotify.com/embed/episode/2VPTtr2iJEq2ueG2xIZQqy?utm_source=generator" 
-    width="100%" height="152" frameborder="0" allowfullscreen="" 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-  </iframe>
+  <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 
-  <iframe style="border-radius:12px" 
-    src="https://open.spotify.com/embed/episode/1l3TloiW0KQH8RdymXSrYN?utm_source=generator" 
-    width="100%" height="152" frameborder="0" allowfullscreen="" 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-  </iframe>
+  <!-- Form Seguir -->
+  <div class="follow-box">
+    <h2>Quer receber novidades dos episódios sobre Deus?</h2>
+    <input type="email" id="email-deus" placeholder="Digite seu email" required>
+    <button onclick="seguir('Deus', 'email-deus')">🔔 Seguir</button>
+  </div>
 
-  <iframe style="border-radius:12px" 
-    src="https://open.spotify.com/embed/episode/64NWkPxmUCmT155JLwgpoN?utm_source=generator" 
-    width="100%" height="152" frameborder="0" allowfullscreen="" 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-  </iframe>
+  <script>
+    function seguir(origem, campoId) {
+      let email = document.getElementById(campoId).value;
+      if (!email) {
+        alert("Por favor, digite seu email.");
+        return;
+      }
 
-  <iframe style="border-radius:12px" 
-    src="https://open.spotify.com/embed/episode/0oyrugXfdp7Qo7tnDfjCRa?utm_source=generator" 
-    width="100%" height="152" frameborder="0" allowfullscreen="" 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-  </iframe>
-
-  <iframe style="border-radius:12px" 
-    src="https://open.spotify.com/embed/episode/7nkBSntS4R58YJaDf66jRA?utm_source=generator" 
-    width="100%" height="152" frameborder="0" allowfullscreen="" 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-  </iframe>
-
+      fetch("SUA_URL_DO_WEBAPP", {
+        method: "POST",
+        body: JSON.stringify({ email: email, origem: origem })
+      })
+      .then(() => alert("Obrigado por seguir os episódios sobre " + origem + "!"));
+    }
+  </script>
 </body>
 </html>
