--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -43,6 +43,36 @@
     .back-button:hover {
       background: #005f99;
     }
+
+    .follow-box {
+      margin-top: 40px;
+      padding: 20px;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      display: inline-block;
+    }
+
+    input[type="email"] {
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      width: 250px;
+    }
+
+    button {
+      padding: 10px 20px;
+      margin-left: 10px;
+      background: #007acc;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #005f99;
+    }
   </style>
 </head>
 <body>
@@ -51,33 +81,36 @@
     <h1>Episódios sobre Jesus</h1>
   </header>
 
-  <!-- Episódio 1 -->
-  <iframe 
-    src="https://open.spotify.com/embed/episode/6lQVKVmaKQ8nyvQtZe9aBE?si=1e7d5494c2c74cf3" 
-    width="100%" height="232" frameBorder="0" 
-    allowfullscreen 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-  </iframe>
+  <!-- Players -->
+  <iframe src="https://open.spotify.com/embed/episode/35q1zOrBmsCB0EHu04ymWh?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <!-- Episódio 2 -->
-  <iframe 
-    src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl?si=Zx34Mw76QU24ukKfMjlY1A" 
-    width="100%" height="232" frameBorder="0" 
-    allowfullscreen 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-  </iframe>
+  <iframe src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl?si=Zx34Mw76QU24ukKfMjlY1A" width="100%" height="232" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <!-- Episódio 3 -->
-  <iframe 
-    src="https://open.spotify.com/embed/episode/6KMtaYjFEt8zHhOUAZeUov?si=83e8caeea267465b" 
-    width="100%" height="232" frameBorder="0" 
-    allowfullscreen 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-  </iframe>
+  <iframe src="https://open.spotify.com/embed/episode/4SdpAuFwc67eSueiS6L7gV?si=bb531142aba948d8" width="100%" height="232" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <!-- Botão voltar -->
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
+
+  <!-- Form Seguir -->
+  <div class="follow-box">
+    <h2>Quer receber novidades dos episódios sobre Jesus?</h2>
+    <input type="email" id="email-jesus" placeholder="Digite seu email" required>
+    <button onclick="seguir('Jesus', 'email-jesus')">🔔 Seguir</button>
+  </div>
+
+  <script>
+    function seguir(origem, campoId) {
+      let email = document.getElementById(campoId).value;
+      if (!email) {
+        alert("Por favor, digite seu email.");
+        return;
+      }
+
+      fetch("SUA_URL_DO_WEBAPP", {
+        method: "POST",
+        body: JSON.stringify({ email: email, origem: origem })
+      })
+      .then(() => alert("Obrigado por seguir os episódios sobre " + origem + "!"));
+    }
+  </script>
 </body>
 </html>
-
-
